--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:ital,wght@0,600;1,400&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,8 +15,12 @@ code {
 }
 
 header {
+  font-family: 'Roboto Mono';
   text-align: center;
-  font-size: 30px;
-  padding: 20px;
+  font-size: 45px;
+  padding: 50px;
 }
 
+.searchbox {
+  text-align: center;
+}
