--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ header {
   text-align: center;
 }
 
+
 .photo {
   height: 200px;
   width: 200px;
@@ -40,4 +41,18 @@ header {
 .followerphoto {
   height: 100px;
   width: 100px;
+}
+
+#followerslist {
+  padding: 20px;
+}
+
+/* used ID to override font styles */
+
+#foundtext {
+  font-family: 'Roboto Mono';
+}
+
+#foundname{
+  font-family: 'Roboto Mono';
 }
