--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,22 @@ header {
   padding: 50px;
 }
 
+a.link {
+  color: rgb(89, 69, 216);
+}
+
+a.link:hover {
+  color: black;
+}
+
+
 .searchbox {
   text-align: center;
 }
 
 .userinfo {
   font-family: 'Roboto Mono';
-  padding: 20px;
+  padding: 100px;
   text-align: center;
 }
 
@@ -71,7 +80,3 @@ header {
   font-size: 12px;
   text-decoration:  underline;
 }
-
-/* #followerusername:hover {
-  color: white;
-} */
